<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.samd.cci_profile_maker.createProfile">

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nameInput"
        android:layout_alignStart="@+id/nameInput"
        android:layout_below="@+id/nameInput"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="Email Address"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:hint="Name"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="78dp" />

    <ImageButton
        android:id="@+id/selectAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailInput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:onClick="avatarSelectHandler"
        android:padding="0dp"
        app:srcCompat="@drawable/select_avatar" />

    <TextView
        android:id="@+id/department"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/department"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:layout_below="@+id/selectAvatar"
        android:layout_alignLeft="@+id/emailInput"
        android:layout_alignStart="@+id/emailInput"
        android:layout_marginTop="12dp" />

    <RadioGroup
        android:layout_width="125dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/department"
        android:layout_marginLeft="25dp"
        android:id="@+id/radioGroup">

        <RadioButton
            android:id="@+id/sis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sis" />

        <RadioButton
            android:id="@+id/cs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cs" />

        <RadioButton
            android:id="@+id/bio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/bio" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/department"
        android:layout_alignStart="@+id/department"
        android:layout_below="@+id/radioGroup"
        android:layout_marginTop="18dp"
        android:text="@string/curMood"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/moodDyn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/radioGroup"
        android:layout_toRightOf="@+id/radioGroup"
        android:text="@string/Angry"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

    <SeekBar
        android:id="@+id/moodSeekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="85dp"
        android:layout_marginTop="11dp"
        android:max="3"
        android:progress="2" />

    <ImageView
        android:id="@+id/moodImg"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignEnd="@+id/emailInput"
        android:layout_alignRight="@+id/emailInput"
        android:layout_below="@+id/moodDyn"
        app:srcCompat="@drawable/happy" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/moodSeekBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="submitHandler"
        android:text="@string/submit" />


</RelativeLayout>
