<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.samd.cci_profile_maker.DisplayProfile">

    <ImageView
        android:id="@+id/avatarImgDyn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        app:srcCompat="@drawable/avatar_f_1"
        tools:layout_editor_absoluteX="132dp"
        tools:layout_editor_absoluteY="25dp" />

    <TextView
        android:id="@+id/profileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/avatarImgDyn"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:text="Name: "
        android:textSize="18sp" />

    <TextView
        android:id="@+id/profileEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/profileName"
        android:layout_alignStart="@+id/profileName"
        android:layout_below="@+id/profileName"
        android:layout_marginTop="14dp"
        android:text="@string/profileEmail"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/profileDep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/profileEmail"
        android:layout_alignStart="@+id/profileEmail"
        android:layout_below="@+id/profileEmail"
        android:layout_marginTop="12dp"
        android:text="@string/profileDepart"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/profileMood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/profileDep"
        android:layout_alignStart="@+id/profileDep"
        android:layout_below="@+id/profileDep"
        android:layout_marginTop="14dp"
        android:text="@string/profileHappy"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/moodImgDyn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profileMood"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/happy" />

    <TextView
        android:id="@+id/profileNameDyn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/profileName"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:layout_toEndOf="@+id/profileName"
        android:layout_toRightOf="@+id/profileName"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/profileEmailDyn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/profileEmail"
        android:layout_toEndOf="@+id/profileName"
        android:layout_toRightOf="@+id/profileName"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/profileDepartDyn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/profileDep"
        android:layout_alignBottom="@+id/profileDep"
        android:layout_alignLeft="@+id/moodImgDyn"
        android:layout_alignStart="@+id/moodImgDyn"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:textSize="18sp" />

</RelativeLayout>
